--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
+    "blob-to-base64": "^1.0.2",
     "cache-manager": "^2.9.1",
     "lodash": "^4.17.11",
+    "lodash-decorators": "^6.0.1",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.12",
