--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash-decorators": "^6.0.1",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
+    "ramda": "^0.26.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
@@ -41,6 +42,7 @@
     "@types/jest": "^23.3.13",
     "@types/lodash": "^4.14.134",
     "@types/node": "^10.12.18",
+    "@types/ramda": "^0.26.15",
     "@types/supertest": "^2.0.7",
     "concurrently": "^4.1.0",
     "jest": "^24.8.0",
